// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default secret 1`] = `
"{
  "data": {
    "aws_caller_identity": {
      "CallerIdentity": {
        "provider": "aws"
      }
    },
    "aws_partition": {
      "Partitition": {
        "provider": "aws"
      }
    },
    "aws_secretsmanager_random_password": {
      "Secret_RandomPassword_01FCD53F": {
        "exclude_lowercase": false,
        "exclude_numbers": false,
        "exclude_punctuation": false,
        "exclude_uppercase": false,
        "include_space": false,
        "password_length": 32,
        "require_each_included_type": true
      }
    }
  },
  "provider": {
    "aws": [
      {
        "region": "us-east-1"
      }
    ]
  },
  "resource": {
    "aws_secretsmanager_secret": {
      "Secret_A720EF05": {
        "name": "MyStackSecret03F6D6E7",
        "tags": {
          "Name": "Test-Secret",
          "grid:EnvironmentName": "Test",
          "grid:UUID": "a123e4567-e89b-12d3"
        }
      }
    },
    "aws_secretsmanager_secret_version": {
      "Secret_SecretVersion_1CCEE6BD": {
        "secret_id": "\${aws_secretsmanager_secret.Secret_A720EF05.arn}",
        "secret_string": "\${data.aws_secretsmanager_random_password.Secret_RandomPassword_01FCD53F.random_password}"
      }
    }
  },
  "terraform": {
    "backend": {
      "http": {
        "address": "http://localhost:3000"
      }
    },
    "required_providers": {
      "aws": {
        "source": "hashicorp/aws",
        "version": "6.52.0"
      }
    }
  }
}"
`;

exports[`grantRead cross account 1`] = `
"{
  "data": {
    "aws_caller_identity": {
      "CallerIdentity": {
        "provider": "aws"
      }
    },
    "aws_iam_policy_document": {
      "KMS_Policy_BCC43B78": {
        "statement": [
          {
            "actions": [
              "kms:*"
            ],
            "effect": "Allow",
            "principals": [
              {
                "identifiers": [
                  "arn:\${data.aws_partition.Partitition.partition}:iam::\${data.aws_caller_identity.CallerIdentity.account_id}:root"
                ],
                "type": "AWS"
              }
            ],
            "resources": [
              "*"
            ]
          },
          {
            "actions": [
              "kms:Decrypt",
              "kms:Encrypt",
              "kms:ReEncrypt*",
              "kms:GenerateDataKey*"
            ],
            "condition": [
              {
                "test": "StringEquals",
                "values": [
                  "secretsmanager.us-east-1.amazonaws.com"
                ],
                "variable": "kms:ViaService"
              }
            ],
            "effect": "Allow",
            "principals": [
              {
                "identifiers": [
                  "arn:\${data.aws_partition.Partitition.partition}:iam::\${data.aws_caller_identity.CallerIdentity.account_id}:root"
                ],
                "type": "AWS"
              }
            ],
            "resources": [
              "*"
            ]
          },
          {
            "actions": [
              "kms:CreateGrant",
              "kms:DescribeKey"
            ],
            "condition": [
              {
                "test": "StringEquals",
                "values": [
                  "secretsmanager.us-east-1.amazonaws.com"
                ],
                "variable": "kms:ViaService"
              }
            ],
            "effect": "Allow",
            "principals": [
              {
                "identifiers": [
                  "arn:\${data.aws_partition.Partitition.partition}:iam::\${data.aws_caller_identity.CallerIdentity.account_id}:root"
                ],
                "type": "AWS"
              }
            ],
            "resources": [
              "*"
            ]
          },
          {
            "actions": [
              "kms:Decrypt"
            ],
            "condition": [
              {
                "test": "StringEquals",
                "values": [
                  "secretsmanager.us-east-1.amazonaws.com"
                ],
                "variable": "kms:ViaService"
              }
            ],
            "effect": "Allow",
            "principals": [
              {
                "identifiers": [
                  "arn:\${data.aws_partition.Partitition.partition}:iam::1234:root"
                ],
                "type": "AWS"
              }
            ],
            "resources": [
              "*"
            ]
          }
        ]
      },
      "Secret_Policy_13544DA0": {
        "statement": [
          {
            "actions": [
              "secretsmanager:GetSecretValue",
              "secretsmanager:DescribeSecret"
            ],
            "condition": [
              {
                "test": "ForAnyValue:StringEquals",
                "values": [
                  "FOO",
                  "bar"
                ],
                "variable": "secretsmanager:VersionStage"
              }
            ],
            "effect": "Allow",
            "principals": [
              {
                "identifiers": [
                  "arn:\${data.aws_partition.Partitition.partition}:iam::1234:root"
                ],
                "type": "AWS"
              }
            ],
            "resources": [
              "\${aws_secretsmanager_secret.Secret_A720EF05.arn}"
            ]
          }
        ]
      }
    },
    "aws_partition": {
      "Partitition": {
        "provider": "aws"
      }
    },
    "aws_secretsmanager_random_password": {
      "Secret_RandomPassword_01FCD53F": {
        "exclude_lowercase": false,
        "exclude_numbers": false,
        "exclude_punctuation": false,
        "exclude_uppercase": false,
        "include_space": false,
        "password_length": 32,
        "require_each_included_type": true
      }
    }
  },
  "provider": {
    "aws": [
      {
        "region": "us-east-1"
      }
    ]
  },
  "resource": {
    "aws_kms_key": {
      "KMS_6B14D45A": {
        "policy": "\${data.aws_iam_policy_document.KMS_Policy_BCC43B78.json}",
        "tags": {
          "Name": "Test-KMS",
          "grid:EnvironmentName": "Test",
          "grid:UUID": "a123e4567-e89b-12d3"
        }
      }
    },
    "aws_secretsmanager_secret": {
      "Secret_A720EF05": {
        "kms_key_id": "\${aws_kms_key.KMS_6B14D45A.arn}",
        "name": "MyStackSecret03F6D6E7",
        "tags": {
          "Name": "Test-Secret",
          "grid:EnvironmentName": "Test",
          "grid:UUID": "a123e4567-e89b-12d3"
        }
      }
    },
    "aws_secretsmanager_secret_policy": {
      "Secret_Policy_06C9821C": {
        "policy": "\${data.aws_iam_policy_document.Secret_Policy_13544DA0.json}",
        "secret_arn": "\${aws_secretsmanager_secret.Secret_A720EF05.arn}"
      }
    },
    "aws_secretsmanager_secret_version": {
      "Secret_SecretVersion_1CCEE6BD": {
        "secret_id": "\${aws_secretsmanager_secret.Secret_A720EF05.arn}",
        "secret_string": "\${data.aws_secretsmanager_random_password.Secret_RandomPassword_01FCD53F.random_password}"
      }
    }
  },
  "terraform": {
    "backend": {
      "http": {
        "address": "http://localhost:3000"
      }
    },
    "required_providers": {
      "aws": {
        "source": "hashicorp/aws",
        "version": "6.52.0"
      }
    }
  }
}"
`;

exports[`grantRead with KMS Key 1`] = `
"{
  "data": {
    "aws_caller_identity": {
      "CallerIdentity": {
        "provider": "aws"
      }
    },
    "aws_iam_policy_document": {
      "KMS_Policy_BCC43B78": {
        "statement": [
          {
            "actions": [
              "kms:*"
            ],
            "effect": "Allow",
            "principals": [
              {
                "identifiers": [
                  "arn:\${data.aws_partition.Partitition.partition}:iam::\${data.aws_caller_identity.CallerIdentity.account_id}:root"
                ],
                "type": "AWS"
              }
            ],
            "resources": [
              "*"
            ]
          },
          {
            "actions": [
              "kms:Decrypt",
              "kms:Encrypt",
              "kms:ReEncrypt*",
              "kms:GenerateDataKey*"
            ],
            "condition": [
              {
                "test": "StringEquals",
                "values": [
                  "secretsmanager.us-east-1.amazonaws.com"
                ],
                "variable": "kms:ViaService"
              }
            ],
            "effect": "Allow",
            "principals": [
              {
                "identifiers": [
                  "arn:\${data.aws_partition.Partitition.partition}:iam::\${data.aws_caller_identity.CallerIdentity.account_id}:root"
                ],
                "type": "AWS"
              }
            ],
            "resources": [
              "*"
            ]
          },
          {
            "actions": [
              "kms:CreateGrant",
              "kms:DescribeKey"
            ],
            "condition": [
              {
                "test": "StringEquals",
                "values": [
                  "secretsmanager.us-east-1.amazonaws.com"
                ],
                "variable": "kms:ViaService"
              }
            ],
            "effect": "Allow",
            "principals": [
              {
                "identifiers": [
                  "arn:\${data.aws_partition.Partitition.partition}:iam::\${data.aws_caller_identity.CallerIdentity.account_id}:root"
                ],
                "type": "AWS"
              }
            ],
            "resources": [
              "*"
            ]
          },
          {
            "actions": [
              "kms:Decrypt"
            ],
            "condition": [
              {
                "test": "StringEquals",
                "values": [
                  "secretsmanager.us-east-1.amazonaws.com"
                ],
                "variable": "kms:ViaService"
              }
            ],
            "effect": "Allow",
            "principals": [
              {
                "identifiers": [
                  "\${aws_iam_role.Role_1ABCC5F0.arn}"
                ],
                "type": "AWS"
              }
            ],
            "resources": [
              "*"
            ]
          }
        ]
      },
      "Role_AssumeRolePolicy_B27E8126": {
        "statement": [
          {
            "actions": [
              "sts:AssumeRole"
            ],
            "effect": "Allow",
            "principals": [
              {
                "identifiers": [
                  "arn:\${data.aws_partition.Partitition.partition}:iam::\${data.aws_caller_identity.CallerIdentity.account_id}:root"
                ],
                "type": "AWS"
              }
            ]
          }
        ]
      },
      "Role_DefaultPolicy_2E5E5E0B": {
        "statement": [
          {
            "actions": [
              "secretsmanager:GetSecretValue",
              "secretsmanager:DescribeSecret"
            ],
            "effect": "Allow",
            "resources": [
              "\${aws_secretsmanager_secret.Secret_A720EF05.arn}"
            ]
          }
        ]
      }
    },
    "aws_partition": {
      "Partitition": {
        "provider": "aws"
      }
    },
    "aws_secretsmanager_random_password": {
      "Secret_RandomPassword_01FCD53F": {
        "exclude_lowercase": false,
        "exclude_numbers": false,
        "exclude_punctuation": false,
        "exclude_uppercase": false,
        "include_space": false,
        "password_length": 32,
        "require_each_included_type": true
      }
    }
  },
  "provider": {
    "aws": [
      {
        "region": "us-east-1"
      }
    ]
  },
  "resource": {
    "aws_iam_role": {
      "Role_1ABCC5F0": {
        "assume_role_policy": "\${data.aws_iam_policy_document.Role_AssumeRolePolicy_B27E8126.json}",
        "name_prefix": "a123e4567-e89b-12d3-MyStackRole",
        "tags": {
          "Name": "Test-Role",
          "grid:EnvironmentName": "Test",
          "grid:UUID": "a123e4567-e89b-12d3"
        }
      }
    },
    "aws_iam_role_policy": {
      "Role_DefaultPolicy_ResourceRoles0_50D8AFFD": {
        "name": "MyStackRoleDefaultPolicy86F304AD",
        "policy": "\${data.aws_iam_policy_document.Role_DefaultPolicy_2E5E5E0B.json}",
        "role": "\${aws_iam_role.Role_1ABCC5F0.name}"
      }
    },
    "aws_kms_key": {
      "KMS_6B14D45A": {
        "policy": "\${data.aws_iam_policy_document.KMS_Policy_BCC43B78.json}",
        "tags": {
          "Name": "Test-KMS",
          "grid:EnvironmentName": "Test",
          "grid:UUID": "a123e4567-e89b-12d3"
        }
      }
    },
    "aws_secretsmanager_secret": {
      "Secret_A720EF05": {
        "kms_key_id": "\${aws_kms_key.KMS_6B14D45A.arn}",
        "name": "MyStackSecret03F6D6E7",
        "tags": {
          "Name": "Test-Secret",
          "grid:EnvironmentName": "Test",
          "grid:UUID": "a123e4567-e89b-12d3"
        }
      }
    },
    "aws_secretsmanager_secret_version": {
      "Secret_SecretVersion_1CCEE6BD": {
        "secret_id": "\${aws_secretsmanager_secret.Secret_A720EF05.arn}",
        "secret_string": "\${data.aws_secretsmanager_random_password.Secret_RandomPassword_01FCD53F.random_password}"
      }
    }
  },
  "terraform": {
    "backend": {
      "http": {
        "address": "http://localhost:3000"
      }
    },
    "required_providers": {
      "aws": {
        "source": "hashicorp/aws",
        "version": "6.52.0"
      }
    }
  }
}"
`;

exports[`grantRead with version label constraint 1`] = `
"{
  "data": {
    "aws_caller_identity": {
      "CallerIdentity": {
        "provider": "aws"
      }
    },
    "aws_iam_policy_document": {
      "KMS_Policy_BCC43B78": {
        "statement": [
          {
            "actions": [
              "kms:*"
            ],
            "effect": "Allow",
            "principals": [
              {
                "identifiers": [
                  "arn:\${data.aws_partition.Partitition.partition}:iam::\${data.aws_caller_identity.CallerIdentity.account_id}:root"
                ],
                "type": "AWS"
              }
            ],
            "resources": [
              "*"
            ]
          },
          {
            "actions": [
              "kms:Decrypt",
              "kms:Encrypt",
              "kms:ReEncrypt*",
              "kms:GenerateDataKey*"
            ],
            "condition": [
              {
                "test": "StringEquals",
                "values": [
                  "secretsmanager.us-east-1.amazonaws.com"
                ],
                "variable": "kms:ViaService"
              }
            ],
            "effect": "Allow",
            "principals": [
              {
                "identifiers": [
                  "arn:\${data.aws_partition.Partitition.partition}:iam::\${data.aws_caller_identity.CallerIdentity.account_id}:root"
                ],
                "type": "AWS"
              }
            ],
            "resources": [
              "*"
            ]
          },
          {
            "actions": [
              "kms:CreateGrant",
              "kms:DescribeKey"
            ],
            "condition": [
              {
                "test": "StringEquals",
                "values": [
                  "secretsmanager.us-east-1.amazonaws.com"
                ],
                "variable": "kms:ViaService"
              }
            ],
            "effect": "Allow",
            "principals": [
              {
                "identifiers": [
                  "arn:\${data.aws_partition.Partitition.partition}:iam::\${data.aws_caller_identity.CallerIdentity.account_id}:root"
                ],
                "type": "AWS"
              }
            ],
            "resources": [
              "*"
            ]
          },
          {
            "actions": [
              "kms:Decrypt"
            ],
            "condition": [
              {
                "test": "StringEquals",
                "values": [
                  "secretsmanager.us-east-1.amazonaws.com"
                ],
                "variable": "kms:ViaService"
              }
            ],
            "effect": "Allow",
            "principals": [
              {
                "identifiers": [
                  "\${aws_iam_role.Role_1ABCC5F0.arn}"
                ],
                "type": "AWS"
              }
            ],
            "resources": [
              "*"
            ]
          }
        ]
      },
      "Role_AssumeRolePolicy_B27E8126": {
        "statement": [
          {
            "actions": [
              "sts:AssumeRole"
            ],
            "effect": "Allow",
            "principals": [
              {
                "identifiers": [
                  "arn:\${data.aws_partition.Partitition.partition}:iam::\${data.aws_caller_identity.CallerIdentity.account_id}:root"
                ],
                "type": "AWS"
              }
            ]
          }
        ]
      },
      "Role_DefaultPolicy_2E5E5E0B": {
        "statement": [
          {
            "actions": [
              "secretsmanager:GetSecretValue",
              "secretsmanager:DescribeSecret"
            ],
            "condition": [
              {
                "test": "ForAnyValue:StringEquals",
                "values": [
                  "FOO",
                  "bar"
                ],
                "variable": "secretsmanager:VersionStage"
              }
            ],
            "effect": "Allow",
            "resources": [
              "\${aws_secretsmanager_secret.Secret_A720EF05.arn}"
            ]
          }
        ]
      }
    },
    "aws_partition": {
      "Partitition": {
        "provider": "aws"
      }
    },
    "aws_secretsmanager_random_password": {
      "Secret_RandomPassword_01FCD53F": {
        "exclude_lowercase": false,
        "exclude_numbers": false,
        "exclude_punctuation": false,
        "exclude_uppercase": false,
        "include_space": false,
        "password_length": 32,
        "require_each_included_type": true
      }
    }
  },
  "provider": {
    "aws": [
      {
        "region": "us-east-1"
      }
    ]
  },
  "resource": {
    "aws_iam_role": {
      "Role_1ABCC5F0": {
        "assume_role_policy": "\${data.aws_iam_policy_document.Role_AssumeRolePolicy_B27E8126.json}",
        "name_prefix": "a123e4567-e89b-12d3-MyStackRole",
        "tags": {
          "Name": "Test-Role",
          "grid:EnvironmentName": "Test",
          "grid:UUID": "a123e4567-e89b-12d3"
        }
      }
    },
    "aws_iam_role_policy": {
      "Role_DefaultPolicy_ResourceRoles0_50D8AFFD": {
        "name": "MyStackRoleDefaultPolicy86F304AD",
        "policy": "\${data.aws_iam_policy_document.Role_DefaultPolicy_2E5E5E0B.json}",
        "role": "\${aws_iam_role.Role_1ABCC5F0.name}"
      }
    },
    "aws_kms_key": {
      "KMS_6B14D45A": {
        "policy": "\${data.aws_iam_policy_document.KMS_Policy_BCC43B78.json}",
        "tags": {
          "Name": "Test-KMS",
          "grid:EnvironmentName": "Test",
          "grid:UUID": "a123e4567-e89b-12d3"
        }
      }
    },
    "aws_secretsmanager_secret": {
      "Secret_A720EF05": {
        "kms_key_id": "\${aws_kms_key.KMS_6B14D45A.arn}",
        "name": "MyStackSecret03F6D6E7",
        "tags": {
          "Name": "Test-Secret",
          "grid:EnvironmentName": "Test",
          "grid:UUID": "a123e4567-e89b-12d3"
        }
      }
    },
    "aws_secretsmanager_secret_version": {
      "Secret_SecretVersion_1CCEE6BD": {
        "secret_id": "\${aws_secretsmanager_secret.Secret_A720EF05.arn}",
        "secret_string": "\${data.aws_secretsmanager_random_password.Secret_RandomPassword_01FCD53F.random_password}"
      }
    }
  },
  "terraform": {
    "backend": {
      "http": {
        "address": "http://localhost:3000"
      }
    },
    "required_providers": {
      "aws": {
        "source": "hashicorp/aws",
        "version": "6.52.0"
      }
    }
  }
}"
`;

exports[`grantWrite with kms 1`] = `
"{
  "data": {
    "aws_caller_identity": {
      "CallerIdentity": {
        "provider": "aws"
      }
    },
    "aws_iam_policy_document": {
      "KMS_Policy_BCC43B78": {
        "statement": [
          {
            "actions": [
              "kms:*"
            ],
            "effect": "Allow",
            "principals": [
              {
                "identifiers": [
                  "arn:\${data.aws_partition.Partitition.partition}:iam::\${data.aws_caller_identity.CallerIdentity.account_id}:root"
                ],
                "type": "AWS"
              }
            ],
            "resources": [
              "*"
            ]
          },
          {
            "actions": [
              "kms:Decrypt",
              "kms:Encrypt",
              "kms:ReEncrypt*",
              "kms:GenerateDataKey*"
            ],
            "condition": [
              {
                "test": "StringEquals",
                "values": [
                  "secretsmanager.us-east-1.amazonaws.com"
                ],
                "variable": "kms:ViaService"
              }
            ],
            "effect": "Allow",
            "principals": [
              {
                "identifiers": [
                  "arn:\${data.aws_partition.Partitition.partition}:iam::\${data.aws_caller_identity.CallerIdentity.account_id}:root"
                ],
                "type": "AWS"
              }
            ],
            "resources": [
              "*"
            ]
          },
          {
            "actions": [
              "kms:CreateGrant",
              "kms:DescribeKey"
            ],
            "condition": [
              {
                "test": "StringEquals",
                "values": [
                  "secretsmanager.us-east-1.amazonaws.com"
                ],
                "variable": "kms:ViaService"
              }
            ],
            "effect": "Allow",
            "principals": [
              {
                "identifiers": [
                  "arn:\${data.aws_partition.Partitition.partition}:iam::\${data.aws_caller_identity.CallerIdentity.account_id}:root"
                ],
                "type": "AWS"
              }
            ],
            "resources": [
              "*"
            ]
          },
          {
            "actions": [
              "kms:Encrypt",
              "kms:ReEncrypt*",
              "kms:GenerateDataKey*"
            ],
            "condition": [
              {
                "test": "StringEquals",
                "values": [
                  "secretsmanager.us-east-1.amazonaws.com"
                ],
                "variable": "kms:ViaService"
              }
            ],
            "effect": "Allow",
            "principals": [
              {
                "identifiers": [
                  "\${aws_iam_role.Role_1ABCC5F0.arn}"
                ],
                "type": "AWS"
              }
            ],
            "resources": [
              "*"
            ]
          }
        ]
      },
      "Role_AssumeRolePolicy_B27E8126": {
        "statement": [
          {
            "actions": [
              "sts:AssumeRole"
            ],
            "effect": "Allow",
            "principals": [
              {
                "identifiers": [
                  "arn:\${data.aws_partition.Partitition.partition}:iam::\${data.aws_caller_identity.CallerIdentity.account_id}:root"
                ],
                "type": "AWS"
              }
            ]
          }
        ]
      },
      "Role_DefaultPolicy_2E5E5E0B": {
        "statement": [
          {
            "actions": [
              "secretsmanager:PutSecretValue",
              "secretsmanager:UpdateSecret",
              "secretsmanager:UpdateSecretVersionStage"
            ],
            "effect": "Allow",
            "resources": [
              "\${aws_secretsmanager_secret.Secret_A720EF05.arn}"
            ]
          }
        ]
      }
    },
    "aws_partition": {
      "Partitition": {
        "provider": "aws"
      }
    },
    "aws_secretsmanager_random_password": {
      "Secret_RandomPassword_01FCD53F": {
        "exclude_lowercase": false,
        "exclude_numbers": false,
        "exclude_punctuation": false,
        "exclude_uppercase": false,
        "include_space": false,
        "password_length": 32,
        "require_each_included_type": true
      }
    }
  },
  "provider": {
    "aws": [
      {
        "region": "us-east-1"
      }
    ]
  },
  "resource": {
    "aws_iam_role": {
      "Role_1ABCC5F0": {
        "assume_role_policy": "\${data.aws_iam_policy_document.Role_AssumeRolePolicy_B27E8126.json}",
        "name_prefix": "a123e4567-e89b-12d3-MyStackRole",
        "tags": {
          "Name": "Test-Role",
          "grid:EnvironmentName": "Test",
          "grid:UUID": "a123e4567-e89b-12d3"
        }
      }
    },
    "aws_iam_role_policy": {
      "Role_DefaultPolicy_ResourceRoles0_50D8AFFD": {
        "name": "MyStackRoleDefaultPolicy86F304AD",
        "policy": "\${data.aws_iam_policy_document.Role_DefaultPolicy_2E5E5E0B.json}",
        "role": "\${aws_iam_role.Role_1ABCC5F0.name}"
      }
    },
    "aws_kms_key": {
      "KMS_6B14D45A": {
        "policy": "\${data.aws_iam_policy_document.KMS_Policy_BCC43B78.json}",
        "tags": {
          "Name": "Test-KMS",
          "grid:EnvironmentName": "Test",
          "grid:UUID": "a123e4567-e89b-12d3"
        }
      }
    },
    "aws_secretsmanager_secret": {
      "Secret_A720EF05": {
        "kms_key_id": "\${aws_kms_key.KMS_6B14D45A.arn}",
        "name": "MyStackSecret03F6D6E7",
        "tags": {
          "Name": "Test-Secret",
          "grid:EnvironmentName": "Test",
          "grid:UUID": "a123e4567-e89b-12d3"
        }
      }
    },
    "aws_secretsmanager_secret_version": {
      "Secret_SecretVersion_1CCEE6BD": {
        "secret_id": "\${aws_secretsmanager_secret.Secret_A720EF05.arn}",
        "secret_string": "\${data.aws_secretsmanager_random_password.Secret_RandomPassword_01FCD53F.random_password}"
      }
    }
  },
  "terraform": {
    "backend": {
      "http": {
        "address": "http://localhost:3000"
      }
    },
    "required_providers": {
      "aws": {
        "source": "hashicorp/aws",
        "version": "6.52.0"
      }
    }
  }
}"
`;

exports[`import by secretArn supports tokens for ARNs 1`] = `
"{
  "data": {
    "terraform_remote_state": {
      "cross-stack-reference-input-MyStack": {
        "backend": "http",
        "config": {
          "address": "http://localhost:3000"
        }
      }
    }
  },
  "output": {
    "secretBSecretName": {
      "value": "\${element(split(\\":\\", data.terraform_remote_state.cross-stack-reference-input-MyStack.outputs.cross-stack-output-aws_secretsmanager_secretSecretA_188F2817arn), 6)}"
    }
  },
  "terraform": {
    "backend": {
      "http": {
        "address": "http://localhost:3000"
      }
    }
  }
}"
`;

exports[`secret with generate secret string excludeCharacters 1`] = `
"{
  "data": {
    "aws_caller_identity": {
      "CallerIdentity": {
        "provider": "aws"
      }
    },
    "aws_partition": {
      "Partitition": {
        "provider": "aws"
      }
    },
    "aws_secretsmanager_random_password": {
      "Secret_RandomPassword_01FCD53F": {
        "exclude_characters": "abc\\"@/\\\\",
        "exclude_lowercase": false,
        "exclude_numbers": false,
        "exclude_punctuation": false,
        "exclude_uppercase": false,
        "include_space": false,
        "password_length": 32,
        "require_each_included_type": true
      }
    }
  },
  "provider": {
    "aws": [
      {
        "region": "us-east-1"
      }
    ]
  },
  "resource": {
    "aws_secretsmanager_secret": {
      "Secret_A720EF05": {
        "name": "MyStackSecret03F6D6E7",
        "tags": {
          "Name": "Test-Secret",
          "grid:EnvironmentName": "Test",
          "grid:UUID": "a123e4567-e89b-12d3"
        }
      }
    },
    "aws_secretsmanager_secret_version": {
      "Secret_SecretVersion_1CCEE6BD": {
        "secret_id": "\${aws_secretsmanager_secret.Secret_A720EF05.arn}",
        "secret_string": "\${data.aws_secretsmanager_random_password.Secret_RandomPassword_01FCD53F.random_password}"
      }
    }
  },
  "terraform": {
    "backend": {
      "http": {
        "address": "http://localhost:3000"
      }
    },
    "required_providers": {
      "aws": {
        "source": "hashicorp/aws",
        "version": "6.52.0"
      }
    }
  }
}"
`;

exports[`secret with generate secret string options 1`] = `
"{
  "data": {
    "aws_caller_identity": {
      "CallerIdentity": {
        "provider": "aws"
      }
    },
    "aws_partition": {
      "Partitition": {
        "provider": "aws"
      }
    },
    "aws_secretsmanager_random_password": {
      "Secret_RandomPassword_01FCD53F": {
        "exclude_lowercase": false,
        "exclude_numbers": false,
        "exclude_punctuation": false,
        "exclude_uppercase": true,
        "include_space": false,
        "password_length": 20,
        "require_each_included_type": true
      }
    }
  },
  "provider": {
    "aws": [
      {
        "region": "us-east-1"
      }
    ]
  },
  "resource": {
    "aws_secretsmanager_secret": {
      "Secret_A720EF05": {
        "name": "MyStackSecret03F6D6E7",
        "tags": {
          "Name": "Test-Secret",
          "grid:EnvironmentName": "Test",
          "grid:UUID": "a123e4567-e89b-12d3"
        }
      }
    },
    "aws_secretsmanager_secret_version": {
      "Secret_SecretVersion_1CCEE6BD": {
        "secret_id": "\${aws_secretsmanager_secret.Secret_A720EF05.arn}",
        "secret_string": "\${data.aws_secretsmanager_random_password.Secret_RandomPassword_01FCD53F.random_password}"
      }
    }
  },
  "terraform": {
    "backend": {
      "http": {
        "address": "http://localhost:3000"
      }
    },
    "required_providers": {
      "aws": {
        "source": "hashicorp/aws",
        "version": "6.52.0"
      }
    }
  }
}"
`;

exports[`secret with kms 1`] = `
"{
  "data": {
    "aws_caller_identity": {
      "CallerIdentity": {
        "provider": "aws"
      }
    },
    "aws_iam_policy_document": {
      "KMS_Policy_BCC43B78": {
        "statement": [
          {
            "actions": [
              "kms:*"
            ],
            "effect": "Allow",
            "principals": [
              {
                "identifiers": [
                  "arn:\${data.aws_partition.Partitition.partition}:iam::\${data.aws_caller_identity.CallerIdentity.account_id}:root"
                ],
                "type": "AWS"
              }
            ],
            "resources": [
              "*"
            ]
          },
          {
            "actions": [
              "kms:Decrypt",
              "kms:Encrypt",
              "kms:ReEncrypt*",
              "kms:GenerateDataKey*"
            ],
            "condition": [
              {
                "test": "StringEquals",
                "values": [
                  "secretsmanager.us-east-1.amazonaws.com"
                ],
                "variable": "kms:ViaService"
              }
            ],
            "effect": "Allow",
            "principals": [
              {
                "identifiers": [
                  "arn:\${data.aws_partition.Partitition.partition}:iam::\${data.aws_caller_identity.CallerIdentity.account_id}:root"
                ],
                "type": "AWS"
              }
            ],
            "resources": [
              "*"
            ]
          },
          {
            "actions": [
              "kms:CreateGrant",
              "kms:DescribeKey"
            ],
            "condition": [
              {
                "test": "StringEquals",
                "values": [
                  "secretsmanager.us-east-1.amazonaws.com"
                ],
                "variable": "kms:ViaService"
              }
            ],
            "effect": "Allow",
            "principals": [
              {
                "identifiers": [
                  "arn:\${data.aws_partition.Partitition.partition}:iam::\${data.aws_caller_identity.CallerIdentity.account_id}:root"
                ],
                "type": "AWS"
              }
            ],
            "resources": [
              "*"
            ]
          }
        ]
      }
    },
    "aws_partition": {
      "Partitition": {
        "provider": "aws"
      }
    },
    "aws_secretsmanager_random_password": {
      "Secret_RandomPassword_01FCD53F": {
        "exclude_lowercase": false,
        "exclude_numbers": false,
        "exclude_punctuation": false,
        "exclude_uppercase": false,
        "include_space": false,
        "password_length": 32,
        "require_each_included_type": true
      }
    }
  },
  "provider": {
    "aws": [
      {
        "region": "us-east-1"
      }
    ]
  },
  "resource": {
    "aws_kms_key": {
      "KMS_6B14D45A": {
        "policy": "\${data.aws_iam_policy_document.KMS_Policy_BCC43B78.json}",
        "tags": {
          "Name": "Test-KMS",
          "grid:EnvironmentName": "Test",
          "grid:UUID": "a123e4567-e89b-12d3"
        }
      }
    },
    "aws_secretsmanager_secret": {
      "Secret_A720EF05": {
        "kms_key_id": "\${aws_kms_key.KMS_6B14D45A.arn}",
        "name": "MyStackSecret03F6D6E7",
        "tags": {
          "Name": "Test-Secret",
          "grid:EnvironmentName": "Test",
          "grid:UUID": "a123e4567-e89b-12d3"
        }
      }
    },
    "aws_secretsmanager_secret_version": {
      "Secret_SecretVersion_1CCEE6BD": {
        "secret_id": "\${aws_secretsmanager_secret.Secret_A720EF05.arn}",
        "secret_string": "\${data.aws_secretsmanager_random_password.Secret_RandomPassword_01FCD53F.random_password}"
      }
    }
  },
  "terraform": {
    "backend": {
      "http": {
        "address": "http://localhost:3000"
      }
    },
    "required_providers": {
      "aws": {
        "source": "hashicorp/aws",
        "version": "6.52.0"
      }
    }
  }
}"
`;

exports[`secretName is simply the first segment when the provided secret name has no hyphens 1`] = `
"{
  "data": {
    "aws_caller_identity": {
      "CallerIdentity": {
        "provider": "aws"
      }
    },
    "aws_partition": {
      "Partitition": {
        "provider": "aws"
      }
    },
    "aws_secretsmanager_random_password": {
      "Secret_RandomPassword_01FCD53F": {
        "exclude_lowercase": false,
        "exclude_numbers": false,
        "exclude_punctuation": false,
        "exclude_uppercase": false,
        "include_space": false,
        "password_length": 32,
        "require_each_included_type": true
      }
    }
  },
  "output": {
    "MySecretName": {
      "value": "\${aws_secretsmanager_secret.Secret_A720EF05.name}"
    }
  },
  "provider": {
    "aws": [
      {
        "region": "us-east-1"
      }
    ]
  },
  "resource": {
    "aws_secretsmanager_secret": {
      "Secret_A720EF05": {
        "name": "mySecret",
        "tags": {
          "Name": "Test-Secret",
          "grid:EnvironmentName": "Test",
          "grid:UUID": "a123e4567-e89b-12d3"
        }
      }
    },
    "aws_secretsmanager_secret_version": {
      "Secret_SecretVersion_1CCEE6BD": {
        "secret_id": "\${aws_secretsmanager_secret.Secret_A720EF05.arn}",
        "secret_string": "\${data.aws_secretsmanager_random_password.Secret_RandomPassword_01FCD53F.random_password}"
      }
    }
  },
  "terraform": {
    "backend": {
      "http": {
        "address": "http://localhost:3000"
      }
    },
    "required_providers": {
      "aws": {
        "source": "hashicorp/aws",
        "version": "6.52.0"
      }
    }
  }
}"
`;

exports[`secretName selects the 2 parts of the resource name when the secret name is provided 1`] = `
"{
  "data": {
    "aws_caller_identity": {
      "CallerIdentity": {
        "provider": "aws"
      }
    },
    "aws_partition": {
      "Partitition": {
        "provider": "aws"
      }
    },
    "aws_secretsmanager_random_password": {
      "Secret_RandomPassword_01FCD53F": {
        "exclude_lowercase": false,
        "exclude_numbers": false,
        "exclude_punctuation": false,
        "exclude_uppercase": false,
        "include_space": false,
        "password_length": 32,
        "require_each_included_type": true
      }
    }
  },
  "output": {
    "MySecretName": {
      "value": "\${aws_secretsmanager_secret.Secret_A720EF05.name}"
    }
  },
  "provider": {
    "aws": [
      {
        "region": "us-east-1"
      }
    ]
  },
  "resource": {
    "aws_secretsmanager_secret": {
      "Secret_A720EF05": {
        "name": "my-secret",
        "tags": {
          "Name": "Test-Secret",
          "grid:EnvironmentName": "Test",
          "grid:UUID": "a123e4567-e89b-12d3"
        }
      }
    },
    "aws_secretsmanager_secret_version": {
      "Secret_SecretVersion_1CCEE6BD": {
        "secret_id": "\${aws_secretsmanager_secret.Secret_A720EF05.arn}",
        "secret_string": "\${data.aws_secretsmanager_random_password.Secret_RandomPassword_01FCD53F.random_password}"
      }
    }
  },
  "terraform": {
    "backend": {
      "http": {
        "address": "http://localhost:3000"
      }
    },
    "required_providers": {
      "aws": {
        "source": "hashicorp/aws",
        "version": "6.52.0"
      }
    }
  }
}"
`;

exports[`secretName selects the 3 parts of the resource name when the secret name is provided 1`] = `
"{
  "data": {
    "aws_caller_identity": {
      "CallerIdentity": {
        "provider": "aws"
      }
    },
    "aws_partition": {
      "Partitition": {
        "provider": "aws"
      }
    },
    "aws_secretsmanager_random_password": {
      "Secret_RandomPassword_01FCD53F": {
        "exclude_lowercase": false,
        "exclude_numbers": false,
        "exclude_punctuation": false,
        "exclude_uppercase": false,
        "include_space": false,
        "password_length": 32,
        "require_each_included_type": true
      }
    }
  },
  "output": {
    "MySecretName": {
      "value": "\${aws_secretsmanager_secret.Secret_A720EF05.name}"
    }
  },
  "provider": {
    "aws": [
      {
        "region": "us-east-1"
      }
    ]
  },
  "resource": {
    "aws_secretsmanager_secret": {
      "Secret_A720EF05": {
        "name": "my-secret-hyphenated",
        "tags": {
          "Name": "Test-Secret",
          "grid:EnvironmentName": "Test",
          "grid:UUID": "a123e4567-e89b-12d3"
        }
      }
    },
    "aws_secretsmanager_secret_version": {
      "Secret_SecretVersion_1CCEE6BD": {
        "secret_id": "\${aws_secretsmanager_secret.Secret_A720EF05.arn}",
        "secret_string": "\${data.aws_secretsmanager_random_password.Secret_RandomPassword_01FCD53F.random_password}"
      }
    }
  },
  "terraform": {
    "backend": {
      "http": {
        "address": "http://localhost:3000"
      }
    },
    "required_providers": {
      "aws": {
        "source": "hashicorp/aws",
        "version": "6.52.0"
      }
    }
  }
}"
`;

exports[`secretName selects the 4 parts of the resource name when the secret name is provided 1`] = `
"{
  "data": {
    "aws_caller_identity": {
      "CallerIdentity": {
        "provider": "aws"
      }
    },
    "aws_partition": {
      "Partitition": {
        "provider": "aws"
      }
    },
    "aws_secretsmanager_random_password": {
      "Secret_RandomPassword_01FCD53F": {
        "exclude_lowercase": false,
        "exclude_numbers": false,
        "exclude_punctuation": false,
        "exclude_uppercase": false,
        "include_space": false,
        "password_length": 32,
        "require_each_included_type": true
      }
    }
  },
  "output": {
    "MySecretName": {
      "value": "\${aws_secretsmanager_secret.Secret_A720EF05.name}"
    }
  },
  "provider": {
    "aws": [
      {
        "region": "us-east-1"
      }
    ]
  },
  "resource": {
    "aws_secretsmanager_secret": {
      "Secret_A720EF05": {
        "name": "my-secret-with-hyphens",
        "tags": {
          "Name": "Test-Secret",
          "grid:EnvironmentName": "Test",
          "grid:UUID": "a123e4567-e89b-12d3"
        }
      }
    },
    "aws_secretsmanager_secret_version": {
      "Secret_SecretVersion_1CCEE6BD": {
        "secret_id": "\${aws_secretsmanager_secret.Secret_A720EF05.arn}",
        "secret_string": "\${data.aws_secretsmanager_random_password.Secret_RandomPassword_01FCD53F.random_password}"
      }
    }
  },
  "terraform": {
    "backend": {
      "http": {
        "address": "http://localhost:3000"
      }
    },
    "required_providers": {
      "aws": {
        "source": "hashicorp/aws",
        "version": "6.52.0"
      }
    }
  }
}"
`;

exports[`secretName selects the first two parts of the resource name when the name is auto-generated 1`] = `
"{
  "data": {
    "aws_caller_identity": {
      "CallerIdentity": {
        "provider": "aws"
      }
    },
    "aws_partition": {
      "Partitition": {
        "provider": "aws"
      }
    },
    "aws_secretsmanager_random_password": {
      "Secret_RandomPassword_01FCD53F": {
        "exclude_lowercase": false,
        "exclude_numbers": false,
        "exclude_punctuation": false,
        "exclude_uppercase": false,
        "include_space": false,
        "password_length": 32,
        "require_each_included_type": true
      }
    }
  },
  "output": {
    "MySecretName": {
      "value": "\${aws_secretsmanager_secret.Secret_A720EF05.name}"
    }
  },
  "provider": {
    "aws": [
      {
        "region": "us-east-1"
      }
    ]
  },
  "resource": {
    "aws_secretsmanager_secret": {
      "Secret_A720EF05": {
        "name": "MyStackSecret03F6D6E7",
        "tags": {
          "Name": "Test-Secret",
          "grid:EnvironmentName": "Test",
          "grid:UUID": "a123e4567-e89b-12d3"
        }
      }
    },
    "aws_secretsmanager_secret_version": {
      "Secret_SecretVersion_1CCEE6BD": {
        "secret_id": "\${aws_secretsmanager_secret.Secret_A720EF05.arn}",
        "secret_string": "\${data.aws_secretsmanager_random_password.Secret_RandomPassword_01FCD53F.random_password}"
      }
    }
  },
  "terraform": {
    "backend": {
      "http": {
        "address": "http://localhost:3000"
      }
    },
    "required_providers": {
      "aws": {
        "source": "hashicorp/aws",
        "version": "6.52.0"
      }
    }
  }
}"
`;

exports[`secretObjectValue can be used with a mixture of plain text and a resolvable token 1`] = `
"{
  "data": {
    "aws_caller_identity": {
      "CallerIdentity": {
        "provider": "aws"
      }
    },
    "aws_iam_policy_document": {
      "Role_AssumeRolePolicy_B27E8126": {
        "statement": [
          {
            "actions": [
              "sts:AssumeRole"
            ],
            "effect": "Allow",
            "principals": [
              {
                "identifiers": [
                  "\${data.aws_service_principal.aws_svcp_default_region_ec2.name}"
                ],
                "type": "Service"
              }
            ]
          }
        ]
      }
    },
    "aws_partition": {
      "Partitition": {
        "provider": "aws"
      }
    },
    "aws_service_principal": {
      "aws_svcp_default_region_ec2": {
        "service_name": "ec2"
      }
    }
  },
  "provider": {
    "aws": [
      {
        "region": "us-east-1"
      }
    ]
  },
  "resource": {
    "aws_iam_role": {
      "Role_1ABCC5F0": {
        "assume_role_policy": "\${data.aws_iam_policy_document.Role_AssumeRolePolicy_B27E8126.json}",
        "name_prefix": "a123e4567-e89b-12d3-MyStackRole",
        "tags": {
          "Name": "Test-Role",
          "grid:EnvironmentName": "Test",
          "grid:UUID": "a123e4567-e89b-12d3"
        }
      }
    },
    "aws_secretsmanager_secret": {
      "Secret_A720EF05": {
        "name": "MyStackSecret03F6D6E7",
        "tags": {
          "Name": "Test-Secret",
          "grid:EnvironmentName": "Test",
          "grid:UUID": "a123e4567-e89b-12d3"
        }
      }
    },
    "aws_secretsmanager_secret_version": {
      "Secret_SecretVersion_1CCEE6BD": {
        "secret_id": "\${aws_secretsmanager_secret.Secret_A720EF05.arn}",
        "secret_string": "\${jsonencode({\\"username\\" = \\"username\\", \\"password\\" = aws_iam_role.Role_1ABCC5F0.arn})}"
      }
    }
  },
  "terraform": {
    "backend": {
      "http": {
        "address": "http://localhost:3000"
      }
    },
    "required_providers": {
      "aws": {
        "source": "hashicorp/aws",
        "version": "6.52.0"
      }
    }
  }
}"
`;

exports[`secretStringValue can reference an arbitrary resolvable token 1`] = `
"{
  "data": {
    "aws_caller_identity": {
      "CallerIdentity": {
        "provider": "aws"
      }
    },
    "aws_iam_policy_document": {
      "Role_AssumeRolePolicy_B27E8126": {
        "statement": [
          {
            "actions": [
              "sts:AssumeRole"
            ],
            "effect": "Allow",
            "principals": [
              {
                "identifiers": [
                  "\${data.aws_service_principal.aws_svcp_default_region_ec2.name}"
                ],
                "type": "Service"
              }
            ]
          }
        ]
      }
    },
    "aws_partition": {
      "Partitition": {
        "provider": "aws"
      }
    },
    "aws_service_principal": {
      "aws_svcp_default_region_ec2": {
        "service_name": "ec2"
      }
    }
  },
  "provider": {
    "aws": [
      {
        "region": "us-east-1"
      }
    ]
  },
  "resource": {
    "aws_iam_role": {
      "Role_1ABCC5F0": {
        "assume_role_policy": "\${data.aws_iam_policy_document.Role_AssumeRolePolicy_B27E8126.json}",
        "name_prefix": "a123e4567-e89b-12d3-MyStackRole",
        "tags": {
          "Name": "Test-Role",
          "grid:EnvironmentName": "Test",
          "grid:UUID": "a123e4567-e89b-12d3"
        }
      }
    },
    "aws_secretsmanager_secret": {
      "Secret_A720EF05": {
        "name": "MyStackSecret03F6D6E7",
        "tags": {
          "Name": "Test-Secret",
          "grid:EnvironmentName": "Test",
          "grid:UUID": "a123e4567-e89b-12d3"
        }
      }
    },
    "aws_secretsmanager_secret_version": {
      "Secret_SecretVersion_1CCEE6BD": {
        "secret_id": "\${aws_secretsmanager_secret.Secret_A720EF05.arn}",
        "secret_string": "\${aws_iam_role.Role_1ABCC5F0.arn}"
      }
    }
  },
  "terraform": {
    "backend": {
      "http": {
        "address": "http://localhost:3000"
      }
    },
    "required_providers": {
      "aws": {
        "source": "hashicorp/aws",
        "version": "6.52.0"
      }
    }
  }
}"
`;

exports[`templated secret string 1`] = `
"{
  "data": {
    "aws_caller_identity": {
      "CallerIdentity": {
        "provider": "aws"
      }
    },
    "aws_partition": {
      "Partitition": {
        "provider": "aws"
      }
    },
    "aws_secretsmanager_random_password": {
      "Secret_RandomPassword_01FCD53F": {
        "exclude_lowercase": false,
        "exclude_numbers": false,
        "exclude_punctuation": false,
        "exclude_uppercase": false,
        "include_space": false,
        "password_length": 32,
        "require_each_included_type": true
      }
    }
  },
  "provider": {
    "aws": [
      {
        "region": "us-east-1"
      }
    ]
  },
  "resource": {
    "aws_secretsmanager_secret": {
      "Secret_A720EF05": {
        "name": "MyStackSecret03F6D6E7",
        "tags": {
          "Name": "Test-Secret",
          "grid:EnvironmentName": "Test",
          "grid:UUID": "a123e4567-e89b-12d3"
        }
      }
    },
    "aws_secretsmanager_secret_version": {
      "Secret_SecretVersion_1CCEE6BD": {
        "secret_id": "\${aws_secretsmanager_secret.Secret_A720EF05.arn}",
        "secret_string": "\${jsonencode({\\"username\\" = \\"username\\", \\"password\\" = data.aws_secretsmanager_random_password.Secret_RandomPassword_01FCD53F.random_password})}"
      }
    }
  },
  "terraform": {
    "backend": {
      "http": {
        "address": "http://localhost:3000"
      }
    },
    "required_providers": {
      "aws": {
        "source": "hashicorp/aws",
        "version": "6.52.0"
      }
    }
  }
}"
`;
